--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                       <span>EXTERNAL CONTRACTS & AGREEMENTS</span>
                     </h3>
 
-                    <div class="collapse" id="clpsItemOne">
+                    <div class="collapse show" id="clpsItemOne">
                       <h4 data-toggle="collapse" href="#clpsItemLevelOne" aria-expanded="false" aria-controls="collapseOne">
                         <i class="fa fa-angle-down" aria-hidden="true"></i>
                         <span>Ordinary Course of Business Contracts</span>
                       </h4>
-                      <div class="collapse" id="clpsItemLevelOne">
+                      <div class="collapse show" id="clpsItemLevelOne">
                         <table class="doa-data-table doaOne">
                           <tr>
                             <th></th>
@@ -524,7 +524,7 @@
       </div>
     </footer>
   </body>
-  <script src="scripts/jquery-3.2.1.slim.min.js"></script>
+  <script src="scripts/jquery-3.2.1.min.js"></script>
   <script src="scripts/popper.min.js"></script>
   <script src="scripts/bootstrap.min.js"></script>
   <script src="scripts/mdb.js"></script>
