--- a/formelements.html
+++ b/formelements.html
@@ -77,7 +77,7 @@
       </div>
     </footer>
   </body>
-  <script src="scripts/jquery-3.2.1.slim.min.js"></script>
+  <script src="scripts/jquery-3.2.1.min.js"></script>
   <script src="scripts/popper.min.js"></script>
   <script src="scripts/bootstrap.min.js"></script>
   <script src="scripts/custom.js"></script>
