--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
       <!-- Form login -->
     </section>
   </body>
-  <script src="scripts/jquery-3.2.1.slim.min.js"></script>
+  <script src="scripts/jquery-3.2.1.min.js"></script>
   <script src="scripts/popper.min.js"></script>
   <script src="scripts/bootstrap.min.js"></script>
   <script src="scripts/mdb.js"></script>
